environments/demo/edge-config/non-active/httpbin-vs-cors-tm.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: httpbin-vs
  namespace: gloo-system
spec:
  virtualHost:
    options:
      cors:
        allowCredentials: true
        allowHeaders:
        - Accept
        - limit
        - radius
        allowMethods:
        - GET
        - PUT
        - POST
        - DELETE
        - OPTIONS
        - PATCH
        allowOrigin:
        - www.t-mobile.com
        exposeHeaders:
        - Okta_Access_Token
        - Okta_Refresh_Token
        - Date
        - timezone
        - userstoreid
        maxAge: 1d
    domains:
    - '*'
    routes:
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name: httpbin-httpbin-8000
            namespace: gloo-system
